almost finished charSelection!!!