@@ -21,12 +21,16 @@ import logic.GameManager;
 import logic.ImageScaler;
 import logic.SceneManager;
 import logic.SoundManager;
+import logic.ui.GUIManager;
 import pieces.player.Archer;
 import pieces.player.BasePlayerPiece;
 import pieces.player.Knight;
 import pieces.player.Wizard;
 import skills.BaseSkill;
+import utils.Attack;
+import utils.Buff;
 import utils.Config;
+import utils.Healing;
 
 import java.util.ArrayList;
 
@@ -37,12 +41,15 @@ public class CharSelection {
     Button playBtn;
     Button returnBtn;
 
+    StackPane scrollPaneContainer;
     ScrollPane scrollPane;
 
     static CharInfoBox charInfoBox;
     static CharCard selectedCard;
 
+
     public CharSelection(){
+
 
         rootPane = new Pane();
         rootPane.setStyle("-fx-background-color:#645050");
@@ -51,23 +58,38 @@ public class CharSelection {
 
         scene = new Scene(rootPane , 1280 , 720);
 
+        //change cursor on entering scene
+        GUIManager.getInstance().updateCursor(scene, Config.DefaultCursor);
 
         //-------------------<scroll container>---------------------
+        scrollPaneContainer = new StackPane();
+        scrollPaneContainer.setPrefSize(785,360);
+        scrollPaneContainer.setLayoutX(20);
+        scrollPaneContainer.setLayoutY(150);
+        scrollPaneContainer.setBackground(new Background(new BackgroundImage(new Image(Config.ui_charSelect_box),BackgroundRepeat.REPEAT,BackgroundRepeat.REPEAT,BackgroundPosition.DEFAULT,BackgroundSize.DEFAULT)));
+
         //will display all characters selectable
         scrollPane = new ScrollPane();
         scrollPane.setId("scrollPane");
-        scrollPane.setPrefSize(780,350);
+        scrollPane.setPrefSize(785,360);
         BasePlayerPiece[] characterList = {
-                new Knight(0,0,0),
-                new Archer(0,0,0),
-                new Wizard(0,0,0)
+                new Knight(0,0,1),
+                new Archer(0,0,1),
+                new Wizard(0,0,1),
+                new Wizard(0,0,1),
+                new Wizard(0,0,1)
         };
         scrollPane.setContent(getCharContainer(characterList));
-        scrollPane.setLayoutX(20);
-        scrollPane.setLayoutY(150);
+//        scrollPane.setLayoutX(20);
+//        scrollPane.setLayoutY(150);
         scrollPane.setFitToWidth(true);
         scrollPane.setVbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
         scrollPane.setFocusTraversable(false);
+        scrollPane.setStyle("-fx-background:transparent; -fx-background-color:transparent");
+//        scrollPane.setBackground(new Background(new BackgroundImage(new Image(Config.ui_charSelect_box),BackgroundRepeat.REPEAT,BackgroundRepeat.REPEAT,BackgroundPosition.DEFAULT,BackgroundSize.DEFAULT)));
+        scrollPane.setPadding(new Insets(55,0,35,0));
+//        scrollPane.setBackground(new Background(new BackgroundFill(Color.BLUE,CornerRadii.EMPTY,Insets.EMPTY)));
+        scrollPaneContainer.getChildren().add(scrollPane);
 
 
         //----------------<character status container>------------------------
@@ -107,7 +129,7 @@ public class CharSelection {
         //-------------------<put everything on scene>-----------------------------------------
 
         rootPane.getChildren().addAll(
-                scrollPane,
+                scrollPaneContainer,
                 charInfoBox,
                 playBtn,
                 returnBtn
@@ -117,11 +139,11 @@ public class CharSelection {
     public GridPane getCharContainer(BasePlayerPiece ...characters){
 
         GridPane gridPane = new GridPane();
-        gridPane.setHgap(45);
+        gridPane.setHgap(40);
         gridPane.setVgap(35);
         gridPane.setPrefWidth(780);
         gridPane.setAlignment(Pos.CENTER);
-        gridPane.setBackground(new Background(new BackgroundFill(Color.web("#3f2832"),CornerRadii.EMPTY,Insets.EMPTY)));
+//        gridPane.setBackground(new Background(new BackgroundFill(Color.web("#3f2832"),CornerRadii.EMPTY,Insets.EMPTY)));
         gridPane.setPadding(new Insets(20,0,20,0));
 
         int row = Math.floorDiv(characters.length,3);
@@ -130,10 +152,10 @@ public class CharSelection {
 
         //add row constraint
         if(characters.length<=3){
-            gridPane.getRowConstraints().add(new RowConstraints(300));
+            gridPane.getRowConstraints().add(new RowConstraints(200));
         }else{
             for(int i = 0 ; i < row ; i++){
-                gridPane.getRowConstraints().add(new RowConstraints(300));
+                gridPane.getRowConstraints().add(new RowConstraints(200));
             }
         }
 
@@ -162,7 +184,7 @@ public class CharSelection {
     public VBox makeCharacterCard(BasePlayerPiece piece){
         VBox card = new VBox();
         card.alignmentProperty().set(Pos.BOTTOM_CENTER);
-        card.setPrefSize(200,300);
+        card.setPrefSize(200,200);
         card.setBackground(new Background(new BackgroundFill(Color.web("#e6dbc4") , new CornerRadii(5) , Insets.EMPTY)));
 
         StackPane charImageContainer = new StackPane();
@@ -209,7 +231,7 @@ class CharCard extends VBox{
         charData = piece;
 
         this.alignmentProperty().set(Pos.BOTTOM_CENTER);
-        this.setPrefSize(200,300);
+        this.setPrefSize(200,200);
         this.setBackground(new Background(new BackgroundFill(Color.web("#e6dbc4") , new CornerRadii(5) , Insets.EMPTY)));
         this.setCursor(Cursor.HAND);
 
@@ -222,7 +244,7 @@ class CharCard extends VBox{
         charImage.setPreserveRatio(true);
         charImageContainer.getChildren().addAll(charImage);
 
-        this.getChildren().addAll(charImageContainer , new Rectangle(200 , 72 , Color.CHOCOLATE));
+        this.getChildren().add(charImageContainer);
 
         //----------------<setup hover/click event>----------------------
         this.setOnMouseEntered(mouseEvent -> {
@@ -252,6 +274,7 @@ class CharCard extends VBox{
 
 }
 
+
 //===================================================
 
 class CharInfoBox extends Pane  {
@@ -263,47 +286,45 @@ class CharInfoBox extends Pane  {
     private SkillList skillContainer;
 
     public CharInfoBox(){
+
         this.setPrefSize(360,550);
         this.setBackground(new Background(new BackgroundImage(new Image(Config.ui_charInfo_box),BackgroundRepeat.NO_REPEAT,BackgroundRepeat.NO_REPEAT,BackgroundPosition.DEFAULT,BackgroundSize.DEFAULT)));
         this.setLayoutX(850);
         this.setLayoutY(70);
 
-
         //name on top of the box
-        charName = new Text("");
+        charName = new Text();
         charName.setId("charNameText");
-
 
         //-----------<container on charInfoBox Pane>-----------------
         innerContainer = new VBox();
         innerContainer.setPrefSize(360,530);
+        innerContainer.setLayoutX(10);
         innerContainer.setLayoutY(15);
         innerContainer.setPadding(new Insets(20));
         innerContainer.setSpacing(20);
-
-        Text placeholderText = new Text("INFO");
-
-        statBox = new StatBox();
-        statBox.setText(999,999,999 , 999);
-
-        skillContainer = new SkillList();
-
-        placeholderText.setStyle("-fx-font-family:'x16y32pxGridGazer';-fx-font-size:64px; -fx-fill:#666666");
-
-        innerContainer.getChildren().addAll(statBox , skillContainer);
         //------------------------------------------------------------
 
-        this.getChildren().addAll(innerContainer,charName);
 
+        //add statBox,skillContainer to innerContainer
+        statBox = new StatBox();
+        statBox.setText(999,999,999 , 999);
+        skillContainer = new SkillList();
+        innerContainer.getChildren().addAll(statBox , skillContainer);
+        innerContainer.setVisible(false); //hide at start
+
+        this.getChildren().addAll(innerContainer,charName);
 
     }
 
     public void changeCharInfo(BasePlayerPiece piece){
+        innerContainer.setVisible(true);
+
         //switch to selected character info page
         charName.setText(piece.getClass().getSimpleName());
-
         statBox.changeInfo(piece);
         skillContainer.changeInfo(piece);
+        skillContainer.displaySkill(0);
     }
 
 
@@ -328,8 +349,8 @@ class StatBox extends VBox{
         hp.setAlignment(Pos.CENTER_LEFT);
         hp.getChildren().add(new ImageView( ImageScaler.resample( new Image(Config.ui_heart_icon),2) ) );
         hp.getChildren().add(new Text("0"));
-        hp.getChildren().getFirst();
-        hp.getChildren().getLast().setStyle("-fx-font-family:x8y12pxTheStrongGamer; -fx-font-size:24; -fx-fill:white;");
+        hp.getChildren().get(0);
+        hp.getChildren().get(1).setStyle("-fx-font-family:x8y12pxTheStrongGamer; -fx-font-size:24; -fx-fill:white;");
 
         mp = new HBox();
         mp.setSpacing(10);
@@ -337,7 +358,7 @@ class StatBox extends VBox{
         mp.setAlignment(Pos.CENTER_LEFT);
         mp.getChildren().add(new ImageView( ImageScaler.resample( new Image(Config.ui_mana_icon),2) ) );
         mp.getChildren().add(new Text("0"));
-        mp.getChildren().getLast().setStyle("-fx-font-family:x8y12pxTheStrongGamer; -fx-font-size:24; -fx-fill:white;");
+        mp.getChildren().get(1).setStyle("-fx-font-family:x8y12pxTheStrongGamer; -fx-font-size:24; -fx-fill:white;");
 
         ap = new HBox();
         ap.setSpacing(10);
@@ -345,7 +366,7 @@ class StatBox extends VBox{
         ap.setAlignment(Pos.CENTER_LEFT);
         ap.getChildren().add(new ImageView( ImageScaler.resample( new Image(Config.ui_stamina_icon),2) ) );
         ap.getChildren().add(new Text("0"));
-        ap.getChildren().getLast().setStyle("-fx-font-family:x8y12pxTheStrongGamer; -fx-font-size:24; -fx-fill:white;");
+        ap.getChildren().get(1).setStyle("-fx-font-family:x8y12pxTheStrongGamer; -fx-font-size:24; -fx-fill:white;");
 
         atk = new HBox();
         atk.setSpacing(10);
@@ -353,7 +374,7 @@ class StatBox extends VBox{
         atk.setAlignment(Pos.CENTER_LEFT);
         atk.getChildren().add(new ImageView( ImageScaler.resample( new Image(Config.ui_sword_icon),2) ) );
         atk.getChildren().add(new Text("0"));
-        atk.getChildren().getLast().setStyle("-fx-font-family:x8y12pxTheStrongGamer; -fx-font-size:24; -fx-fill:white;");
+        atk.getChildren().get(1).setStyle("-fx-font-family:x8y12pxTheStrongGamer; -fx-font-size:24; -fx-fill:white;");
 
 
         this.getChildren().addAll(hp,mp,ap,atk);
@@ -362,10 +383,10 @@ class StatBox extends VBox{
     public void setText(int hp, int mp, int ap , int atk){
 
         //set stat number
-        ((Text) this.hp.getChildren().getLast()).setText(String.valueOf(hp));
-        ((Text) this.mp.getChildren().getLast()).setText(String.valueOf(mp));
-        ((Text) this.ap.getChildren().getLast()).setText(String.valueOf(ap));
-        ((Text) this.atk.getChildren().getLast()).setText(String.valueOf(atk));
+        ((Text) this.hp.getChildren().get(1)).setText(String.valueOf(hp));
+        ((Text) this.mp.getChildren().get(1)).setText(String.valueOf(mp));
+        ((Text) this.ap.getChildren().get(1)).setText(String.valueOf(ap));
+        ((Text) this.atk.getChildren().get(1)).setText(String.valueOf(atk));
     }
 
     public void changeInfo(BasePlayerPiece piece){
@@ -389,6 +410,12 @@ class SkillList extends VBox{
     private ArrayList<StackPane> skills = new ArrayList<>();
     private BaseSkill[] skillDatas;
 
+    //skill desc. component
+    private Pane skillDescContainer;
+    private StackPane skillTextBox;
+    private Text skillText;
+    protected SkillStat skillStat;
+
     public SkillList(){
 
         Text boxLabel = new Text("Skills");
@@ -397,9 +424,39 @@ class SkillList extends VBox{
 
         skillContainer = createSkillContainer();
 
+
+        skillDescContainer = new VBox();
+        skillDescContainer.setPrefSize(300,200);
+        skillDescContainer.setMaxSize(300,200);
+
+        Text skillContainerLabel = new Text("Description");
+        skillContainerLabel.setStyle("-fx-font-family:x12y16pxSolidLinker; -fx-font-size:16; -fx-fill:white;");
+        skillContainerLabel.setLayoutX(80);
+        skillContainerLabel.setLayoutY(20);
+
+        skillTextBox = new StackPane();
+        skillTextBox.setPrefSize(280,120);
+        skillTextBox.setLayoutX(10);
+        skillTextBox.setLayoutY(25);
+        skillTextBox.setStyle("-fx-background-color:#cdcfd7");
+        skillTextBox.setPadding(new Insets(5));
+        skillText = new Text("Click on skill to get details");
+        skillText.setWrappingWidth(270);
+        skillText.setStyle("-fx-font-family:x16y32pxGridGazer; -fx-font-size:18; -fx-fill:white;");
+        skillTextBox.getChildren().add(skillText);
+        StackPane.setAlignment(skillText,Pos.TOP_LEFT);
+
+        skillStat = new SkillStat();
+        skillStat.setLayoutX(10);
+        skillStat.setLayoutY(150);
+
+        skillDescContainer.getChildren().addAll(skillContainerLabel,skillTextBox,skillStat);
+
+
         this.getChildren().addAll(
                 boxLabel,
-                skillContainer
+                skillContainer,
+                skillDescContainer
         );
     }
 
@@ -410,14 +467,14 @@ class SkillList extends VBox{
 
         for(int i = 0; i<piece.getSkills().length ; i++){
             if(skillDatas[i] == null) break;
-
             //                                    we access this
             //                                         |
             //                                         V
             // skillContainer[ stackPane[ImageView skillIcon , ImageView frame] , stackPane[*,*] , stackPane[*,*] , ... ]
-            ((ImageView)((StackPane) skillContainer.getChildren().get(i)).getChildren().getFirst())
+            ((ImageView)((StackPane) skillContainer.getChildren().get(i)).getChildren().get(0))
                     .setImage(ImageScaler.resample(new Image(skillDatas[i].getIcon().getImage().getUrl()),2));
         }
+
     }
 
     //make initial skill container with frame image
@@ -439,10 +496,16 @@ class SkillList extends VBox{
         for(int i = 0; i < 4 ; i++){
             StackPane skillBox = new StackPane();
             skillBox.setPrefSize(SKILLBOX_WIDTH,SKILLBOX_HEIGHT);
+            //assign eventHandler to each box
+            skillBox.setOnMouseClicked(mouseEvent -> {
+                //which index is clicked
+                int index = skillContainer.getChildren().indexOf( (StackPane)mouseEvent.getSource() );
+                displaySkill(index);
+            });
 
             ImageView frame = new ImageView(ImageScaler.resample(new Image(Config.FramePath),2));
-            skillBox.getChildren().addAll(new ImageView(),frame);
 
+            skillBox.getChildren().addAll(new ImageView(),frame);
             skills.add(skillBox);
         }
 
@@ -453,4 +516,97 @@ class SkillList extends VBox{
 
         return gridPane;
     }
+
+
+
+    //clicked skill will call this to display its description
+    public void displaySkill(int index){
+
+        //reset selection frame
+        for(int i = 0 ; i < 4 ; i++){
+            if(i == index){
+                ((ImageView) ((StackPane) skillContainer.getChildren().get(i)).getChildren().get(1)).setImage(ImageScaler.resample(new Image(Config.FrameSelectedPath),2));
+            }else{
+                ((ImageView) ((StackPane) skillContainer.getChildren().get(i)).getChildren().get(1)).setImage(ImageScaler.resample(new Image(Config.FramePath),2));
+            }
+        }
+        BaseSkill skill = skillDatas[index];
+        skillText.setText(skill.getDescription());
+        skillStat.changeSkillStat(skill);
+    }
+
+
+    class SkillStat extends HBox{
+
+        protected HBox dmg = new HBox();
+        protected HBox mp = new HBox();
+        protected HBox ap = new HBox();
+
+        public SkillStat(){
+            this.setPrefSize(280,30);
+            this.setStyle("-fx-background-color:#242424;" +
+                    "-fx-border-style:solid;" +
+                    "-fx-border-top-width:5px;" +
+                    "-fx-border-color:gray;"
+            );
+            this.setSpacing(45);
+            this.setPadding(new Insets(5,10,5,10));
+
+            Text dmgText = new Text("Damage");
+            dmgText.setStyle("-fx-font-family:x16y32pxGridGazer; -fx-font-size:18; -fx-fill:#e62929;");
+            Text dmgValue = new Text("999");
+            dmgValue.setStyle("-fx-font-family:x16y32pxGridGazer; -fx-font-size:18; -fx-fill:white;");
+            dmg.getChildren().addAll(dmgText,dmgValue);
+            dmg.setPrefSize(80,30);
+            dmg.setSpacing(5);
+
+            Text mpText = new Text("Mana Cost");
+            mpText.setStyle("-fx-font-family:x16y32pxGridGazer; -fx-font-size:18; -fx-fill:#0c4dcf;");
+            Text mpValue = new Text("999");
+            mpValue.setStyle("-fx-font-family:x16y32pxGridGazer; -fx-font-size:18; -fx-fill:white;");
+            mp.getChildren().addAll(mpText,mpValue);
+            mp.setPrefSize(80,30);
+            mp.setSpacing(5);
+
+            Text apText = new Text("Action Cost");
+            apText.setStyle("-fx-font-family:x16y32pxGridGazer; -fx-font-size:18; -fx-fill:#dbcd00;");
+            Text apValue = new Text("999");
+            apValue.setStyle("-fx-font-family:x16y32pxGridGazer; -fx-font-size:18; -fx-fill:white;");
+            ap.getChildren().addAll(apText,apValue);
+            ap.setPrefSize(80,30);
+            ap.setSpacing(5);
+
+            VBox MPnAPbox = new VBox();
+            MPnAPbox.setSpacing(8);
+            MPnAPbox.getChildren().addAll(mp,ap);
+
+            this.getChildren().addAll(dmg,MPnAPbox);
+
+        }
+
+        public void changeSkillStat(BaseSkill skill){
+
+            //dmg text depend on type of skill
+            if(skill instanceof Attack){
+                int atk = ((Attack) skill).getAttack();
+                ((Text) this.dmg.getChildren().get(0)).setText("Damage");
+                this.dmg.getChildren().get(0).setStyle("-fx-font-family:x16y32pxGridGazer; -fx-font-size:18; -fx-fill:#e62929;");
+                ((Text) this.dmg.getChildren().get(1)).setText( atk==0?"-":String.valueOf(atk) );
+            }
+            else if(skill instanceof Healing){
+                int heal = ((Healing) skill).getHeal();
+                ((Text) this.dmg.getChildren().get(0)).setText("Heal");
+                this.dmg.getChildren().get(0).setStyle("-fx-font-family:x16y32pxGridGazer; -fx-font-size:18; -fx-fill:#22c406;");
+                ((Text) this.dmg.getChildren().get(1)).setText( heal==0?"-":String.valueOf(heal) );
+            }
+            else if(skill instanceof Buff){
+                ((Text) this.dmg.getChildren().get(0)).setText("");
+                ((Text) this.dmg.getChildren().get(1)).setText( "" );
+            }
+
+            ((Text) this.mp.getChildren().get(1)).setText( skill.getManaCost()==0?"-":String.valueOf(skill.getManaCost()) );
+            ((Text) this.ap.getChildren().get(1)).setText( skill.getActionPointCost()==0?"-":String.valueOf(skill.getActionPointCost()) );
+        }
+    }
+
 }
